--- a/package.json
+++ b/package.json
@@ -17,5 +17,11 @@
   "bugs": {
     "url": "https://github.com/Getitdonemin/SocialNetworkAPI/issues"
   },
-  "homepage": "https://github.com/Getitdonemin/SocialNetworkAPI#readme"
+  "homepage": "https://github.com/Getitdonemin/SocialNetworkAPI#readme",
+  "dependencies": {
+    "express": "^4.18.2",
+    "moment": "^2.29.4",
+    "mongodb": "^4.12.1",
+    "mongoose": "^6.8.0"
+  }
 }
